修改textarea提示文案

--- a/1.0/demo/index.html
+++ b/1.0/demo/index.html
@@ -27,7 +27,7 @@
 <h2>复制记录</h2>
 <ul id="CopyRecord"></ul>
 <textarea name="" id="" cols="30" rows="10" class="J_Check">
-    在此textarea中粘贴(Ctrl+C/鼠标右键)，以检查内容复制是否正确。
+    在此textarea中粘贴(Ctrl+V/鼠标右键)，以检查内容复制是否正确。
 </textarea>
 
 <script>
